--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     <title>Almost There</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
@@ -17,14 +17,16 @@
         margin-top: 10rem;
         text-align: center;
         position: relative;
-        font-size: 120px;
+        font-size: 140px;
         font-family: 'Amatic SC', cursive;
+        color: white;
      }
       .message { 
         text-align: center;
         position: relative;
         font-size: 100px;
         font-family: 'Amatic SC', cursive;
+        color: white;
      }
 </style>
 <body>
