--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 </head>
 <style>
     html,body{
-        background-image: url("https://c.tenor.com/AJBv6U1rfkQAAAAC/background-image-gala");
-        background-color: #cccccc;
-    }
+        <!-- background-image: url("https://c.tenor.com/AJBv6U1rfkQAAAAC/background-image-gala");
+    } -->
     .demoP { 
         margin-top: 10rem;
         text-align: center;
         position: relative;
         font-size: 140px;
         font-family: 'Amatic SC', cursive;
-        color: white;
+        color: rgb(28, 12, 12);
      }
       .message { 
         text-align: center;
         position: relative;
         font-size: 100px;
         font-family: 'Amatic SC', cursive;
-        color: white;
+        color: rgb(76, 41, 41);
      }
 </style>
 <body>
