--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </div>
 <div>
     <p class="message">Until your sweet birthday</p>
+    <p class="message">I love you to the furthest star and back♥</p>
 </div>
 <script>
 // Set the date we're counting down to
