--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script>
 // Set the date we're counting down to
 var year = new Date().getFullYear();
-var countDownDate = new Date("Aug 10," +year.toString()+" 00:00:00").getTime();
+var countDownDate = new Date("Aug 10,2023"+" 00:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
